%YAML 1.1
%TAG !u! tag:unity3d.com,2011:
--- !u!206 &-8153889846080238803
BlendTree:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: BlendTree
  m_Childs: []
  m_BlendParameter: TurnAngle
  m_BlendParameterY: Blend
  m_MinThreshold: 0
  m_MaxThreshold: 1
  m_UseAutomaticThresholds: 1
  m_NormalizedBlendValues: 0
  m_BlendType: 0
--- !u!206 &-5926615173903186317
BlendTree:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: Blend Tree
  m_Childs:
  - serializedVersion: 2
    m_Motion: {fileID: 7400050, guid: df9c30d5fc9fee64cae6f05b9418faa1, type: 3}
    m_Threshold: 0
    m_Position: {x: -1, y: 1}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: TurnAngle
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400048, guid: df9c30d5fc9fee64cae6f05b9418faa1, type: 3}
    m_Threshold: 1
    m_Position: {x: 0, y: 1}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: TurnAngle
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400052, guid: df9c30d5fc9fee64cae6f05b9418faa1, type: 3}
    m_Threshold: 2
    m_Position: {x: 1, y: 1}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: TurnAngle
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400000, guid: fd0711c582b2eb940b1c0901c2bb5f59, type: 2}
    m_Threshold: 3
    m_Position: {x: -0.5, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: TurnAngle
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400002, guid: 74eb51e399cb70a419e316b56ceb9cc7, type: 3}
    m_Threshold: 4
    m_Position: {x: 0, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: TurnAngle
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400000, guid: 7fb4654c86b6c5d4b98e4a4569653a34, type: 2}
    m_Threshold: 5
    m_Position: {x: 0.5, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: TurnAngle
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400000, guid: 985044b260015bb4fbad514583e587b1, type: 2}
    m_Threshold: 6
    m_Position: {x: -0.1, y: -0.5}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: TurnAngle
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400058, guid: df9c30d5fc9fee64cae6f05b9418faa1, type: 3}
    m_Threshold: 7
    m_Position: {x: 0, y: -0.5}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: TurnAngle
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400000, guid: 176a81b341a871542a277bfc8b750c03, type: 2}
    m_Threshold: 8
    m_Position: {x: 0.1, y: -0.5}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: TurnAngle
    m_Mirror: 0
  m_BlendParameter: HorizontalSpeed
  m_BlendParameterY: VerticalSpeed
  m_MinThreshold: 0
  m_MaxThreshold: 8
  m_UseAutomaticThresholds: 0
  m_NormalizedBlendValues: 0
  m_BlendType: 3
--- !u!206 &-5355126438657823684
BlendTree:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: Blend Tree
  m_Childs:
  - serializedVersion: 2
    m_Motion: {fileID: 7400050, guid: df9c30d5fc9fee64cae6f05b9418faa1, type: 3}
    m_Threshold: 0
    m_Position: {x: -1, y: 1}
    m_TimeScale: 1.7
    m_CycleOffset: 0
    m_DirectBlendParameter: TurnAngle
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400048, guid: df9c30d5fc9fee64cae6f05b9418faa1, type: 3}
    m_Threshold: 1
    m_Position: {x: 0, y: 1}
    m_TimeScale: 1.7
    m_CycleOffset: 0
    m_DirectBlendParameter: TurnAngle
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400052, guid: df9c30d5fc9fee64cae6f05b9418faa1, type: 3}
    m_Threshold: 2
    m_Position: {x: 1, y: 1}
    m_TimeScale: 1.7
    m_CycleOffset: 0
    m_DirectBlendParameter: TurnAngle
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400000, guid: fd0711c582b2eb940b1c0901c2bb5f59, type: 2}
    m_Threshold: 3
    m_Position: {x: -0.5, y: 0}
    m_TimeScale: 1.5
    m_CycleOffset: 0
    m_DirectBlendParameter: TurnAngle
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400002, guid: 74eb51e399cb70a419e316b56ceb9cc7, type: 3}
    m_Threshold: 4
    m_Position: {x: 0, y: 0}
    m_TimeScale: 1.7
    m_CycleOffset: 0
    m_DirectBlendParameter: TurnAngle
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400000, guid: 7fb4654c86b6c5d4b98e4a4569653a34, type: 2}
    m_Threshold: 5
    m_Position: {x: 0.5, y: 0}
    m_TimeScale: 1.5
    m_CycleOffset: 0
    m_DirectBlendParameter: TurnAngle
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400000, guid: 985044b260015bb4fbad514583e587b1, type: 2}
    m_Threshold: 6
    m_Position: {x: -0.1, y: -0.5}
    m_TimeScale: 1.5
    m_CycleOffset: 0
    m_DirectBlendParameter: TurnAngle
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400058, guid: df9c30d5fc9fee64cae6f05b9418faa1, type: 3}
    m_Threshold: 7
    m_Position: {x: 0, y: -0.5}
    m_TimeScale: 1.7
    m_CycleOffset: 0
    m_DirectBlendParameter: TurnAngle
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400000, guid: 176a81b341a871542a277bfc8b750c03, type: 2}
    m_Threshold: 8
    m_Position: {x: 0.1, y: -0.5}
    m_TimeScale: 1.5
    m_CycleOffset: 0
    m_DirectBlendParameter: TurnAngle
    m_Mirror: 0
  m_BlendParameter: HorizontalSpeed
  m_BlendParameterY: VerticalSpeed
  m_MinThreshold: 0
  m_MaxThreshold: 8
  m_UseAutomaticThresholds: 0
  m_NormalizedBlendValues: 0
  m_BlendType: 3
--- !u!206 &-5281118582824479741
BlendTree:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: Blend Tree
  m_Childs:
  - serializedVersion: 2
    m_Motion: {fileID: 7400034, guid: 1b868613f10ae8747a1790c8b79c439a, type: 3}
    m_Threshold: 0
    m_Position: {x: -1, y: 1}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: TurnAngle
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400032, guid: 1b868613f10ae8747a1790c8b79c439a, type: 3}
    m_Threshold: 1
    m_Position: {x: 0, y: 1}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: TurnAngle
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400036, guid: 1b868613f10ae8747a1790c8b79c439a, type: 3}
    m_Threshold: 2
    m_Position: {x: 1, y: 1}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: TurnAngle
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400000, guid: fd0711c582b2eb940b1c0901c2bb5f59, type: 2}
    m_Threshold: 3
    m_Position: {x: -0.5, y: 0}
    m_TimeScale: 1.5
    m_CycleOffset: 0
    m_DirectBlendParameter: TurnAngle
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400002, guid: 74eb51e399cb70a419e316b56ceb9cc7, type: 3}
    m_Threshold: 4
    m_Position: {x: 0, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: TurnAngle
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400000, guid: 7fb4654c86b6c5d4b98e4a4569653a34, type: 2}
    m_Threshold: 5
    m_Position: {x: 0.5, y: 0}
    m_TimeScale: 1.5
    m_CycleOffset: 0
    m_DirectBlendParameter: TurnAngle
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400000, guid: 985044b260015bb4fbad514583e587b1, type: 2}
    m_Threshold: 6
    m_Position: {x: -0.1, y: -0.5}
    m_TimeScale: 2
    m_CycleOffset: 0
    m_DirectBlendParameter: TurnAngle
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400010, guid: 1b868613f10ae8747a1790c8b79c439a, type: 3}
    m_Threshold: 7
    m_Position: {x: 0, y: -0.5}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: TurnAngle
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400000, guid: 176a81b341a871542a277bfc8b750c03, type: 2}
    m_Threshold: 8
    m_Position: {x: 0.1, y: -0.5}
    m_TimeScale: 2
    m_CycleOffset: 0
    m_DirectBlendParameter: TurnAngle
    m_Mirror: 0
  m_BlendParameter: HorizontalSpeed
  m_BlendParameterY: VerticalSpeed
  m_MinThreshold: 0
  m_MaxThreshold: 8
  m_UseAutomaticThresholds: 0
  m_NormalizedBlendValues: 0
  m_BlendType: 3
--- !u!206 &-4612635525150762616
BlendTree:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: Blend Tree
  m_Childs:
  - serializedVersion: 2
    m_Motion: {fileID: 7400050, guid: df9c30d5fc9fee64cae6f05b9418faa1, type: 3}
    m_Threshold: 0
    m_Position: {x: -0.8, y: 0.8}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: TurnAngle
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400048, guid: df9c30d5fc9fee64cae6f05b9418faa1, type: 3}
    m_Threshold: 1
    m_Position: {x: 0, y: 0.8}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: TurnAngle
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400052, guid: df9c30d5fc9fee64cae6f05b9418faa1, type: 3}
    m_Threshold: 2
    m_Position: {x: 0.8, y: 0.8}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: TurnAngle
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400000, guid: fd0711c582b2eb940b1c0901c2bb5f59, type: 2}
    m_Threshold: 3
    m_Position: {x: -0.3, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: TurnAngle
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400002, guid: 74eb51e399cb70a419e316b56ceb9cc7, type: 3}
    m_Threshold: 4
    m_Position: {x: 0, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: TurnAngle
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400000, guid: 7fb4654c86b6c5d4b98e4a4569653a34, type: 2}
    m_Threshold: 5
    m_Position: {x: 0.3, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: TurnAngle
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400000, guid: 985044b260015bb4fbad514583e587b1, type: 2}
    m_Threshold: 6
    m_Position: {x: -0.1, y: -0.3}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: TurnAngle
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400058, guid: df9c30d5fc9fee64cae6f05b9418faa1, type: 3}
    m_Threshold: 7
    m_Position: {x: 0, y: -0.3}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: TurnAngle
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400000, guid: 176a81b341a871542a277bfc8b750c03, type: 2}
    m_Threshold: 8
    m_Position: {x: 0.1, y: -0.3}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: TurnAngle
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400034, guid: 1b868613f10ae8747a1790c8b79c439a, type: 3}
    m_Threshold: 9
    m_Position: {x: -0.95, y: 0.95}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: TurnAngle
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400032, guid: 1b868613f10ae8747a1790c8b79c439a, type: 3}
    m_Threshold: 10
    m_Position: {x: 0, y: 0.95}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: TurnAngle
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400036, guid: 1b868613f10ae8747a1790c8b79c439a, type: 3}
    m_Threshold: 11
    m_Position: {x: 0.95, y: 0.95}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: TurnAngle
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400000, guid: fd0711c582b2eb940b1c0901c2bb5f59, type: 2}
    m_Threshold: 12
    m_Position: {x: -0.5, y: 0}
    m_TimeScale: 1.5
    m_CycleOffset: 0
    m_DirectBlendParameter: TurnAngle
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400000, guid: 7fb4654c86b6c5d4b98e4a4569653a34, type: 2}
    m_Threshold: 13
    m_Position: {x: 0.5, y: 0}
    m_TimeScale: 1.5
    m_CycleOffset: 0
    m_DirectBlendParameter: TurnAngle
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400000, guid: 985044b260015bb4fbad514583e587b1, type: 2}
    m_Threshold: 14
    m_Position: {x: -0.1, y: -0.5}
    m_TimeScale: 1.5
    m_CycleOffset: 0
    m_DirectBlendParameter: TurnAngle
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400058, guid: df9c30d5fc9fee64cae6f05b9418faa1, type: 3}
    m_Threshold: 15
    m_Position: {x: 0, y: -0.5}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: TurnAngle
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400000, guid: 176a81b341a871542a277bfc8b750c03, type: 2}
    m_Threshold: 16
    m_Position: {x: 0.1, y: -0.5}
    m_TimeScale: 1.5
    m_CycleOffset: 0
    m_DirectBlendParameter: TurnAngle
    m_Mirror: 0
  m_BlendParameter: HorizontalSpeed
  m_BlendParameterY: VerticalSpeed
  m_MinThreshold: 0
  m_MaxThreshold: 16
  m_UseAutomaticThresholds: 0
  m_NormalizedBlendValues: 0
  m_BlendType: 3
--- !u!1102 &-516046984345707572
AnimatorState:
  serializedVersion: 6
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: Calm walking
  m_Speed: 1
  m_CycleOffset: 0
  m_Transitions: []
  m_StateMachineBehaviours: []
  m_Position: {x: 50, y: 50, z: 0}
  m_IKOnFeet: 0
  m_WriteDefaultValues: 1
  m_Mirror: 0
  m_SpeedParameterActive: 0
  m_MirrorParameterActive: 0
  m_CycleOffsetParameterActive: 0
  m_TimeParameterActive: 0
  m_Motion: {fileID: -5926615173903186317}
  m_Tag: 
  m_SpeedParameter: 
  m_MirrorParameter: 
  m_CycleOffsetParameter: 
  m_TimeParameter: 
--- !u!91 &9100000
AnimatorController:
  m_ObjectHideFlags: 0
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: Player
  serializedVersion: 5
  m_AnimatorParameters:
  - m_Name: HorizontalSpeed
    m_Type: 1
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: VerticalSpeed
    m_Type: 1
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  m_AnimatorLayers:
  - serializedVersion: 5
    m_Name: Move Layer
    m_StateMachine: {fileID: 3433430394564453211}
    m_Mask: {fileID: 0}
    m_Motions: []
    m_Behaviours: []
    m_BlendingMode: 0
    m_SyncedLayerIndex: -1
    m_DefaultWeight: 0
    m_IKPass: 1
    m_SyncedLayerAffectsTiming: 0
    m_Controller: {fileID: 9100000}
--- !u!1102 &1553235556490299482
AnimatorState:
  serializedVersion: 6
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: Combined movement
  m_Speed: 1
  m_CycleOffset: 0
  m_Transitions: []
  m_StateMachineBehaviours: []
  m_Position: {x: 50, y: 50, z: 0}
  m_IKOnFeet: 0
  m_WriteDefaultValues: 1
  m_Mirror: 0
  m_SpeedParameterActive: 0
  m_MirrorParameterActive: 0
  m_CycleOffsetParameterActive: 0
  m_TimeParameterActive: 0
  m_Motion: {fileID: -4612635525150762616}
  m_Tag: 
  m_SpeedParameter: 
  m_MirrorParameter: 
  m_CycleOffsetParameter: 
  m_TimeParameter: 
--- !u!206 &2324855590364897928
BlendTree:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: Blend Tree
  m_Childs:
  - serializedVersion: 2
    m_Motion: {fileID: 7400000, guid: 985044b260015bb4fbad514583e587b1, type: 2}
    m_Threshold: -180
    m_Position: {x: 0, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: TurnAngle
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400000, guid: 985044b260015bb4fbad514583e587b1, type: 2}
    m_Threshold: -135
    m_Position: {x: 0, y: 0}
    m_TimeScale: 0.5
    m_CycleOffset: 0
    m_DirectBlendParameter: TurnAngle
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: -203655887218126122, guid: f0acf4b7d34c39348a8dac267a74ba06,
      type: 3}
    m_Threshold: -90
    m_Position: {x: 0, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: TurnAngle
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: -203655887218126122, guid: f0acf4b7d34c39348a8dac267a74ba06,
      type: 3}
    m_Threshold: -45
    m_Position: {x: 0, y: 0}
    m_TimeScale: 0.5
    m_CycleOffset: 0
    m_DirectBlendParameter: TurnAngle
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: -3100369314251171874, guid: 12e52e465ed793a4d801955e9f964a82,
      type: 3}
    m_Threshold: 0
    m_Position: {x: 0, y: 0}
    m_TimeScale: 0.1
    m_CycleOffset: 0
    m_DirectBlendParameter: TurnAngle
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400000, guid: 7fb4654c86b6c5d4b98e4a4569653a34, type: 2}
    m_Threshold: 45
    m_Position: {x: 0, y: 0}
    m_TimeScale: 0.5
    m_CycleOffset: 0
    m_DirectBlendParameter: TurnAngle
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400000, guid: 7fb4654c86b6c5d4b98e4a4569653a34, type: 2}
    m_Threshold: 90
    m_Position: {x: 0, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: TurnAngle
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400000, guid: 176a81b341a871542a277bfc8b750c03, type: 2}
    m_Threshold: 135
    m_Position: {x: 0, y: 0}
    m_TimeScale: 0.5
    m_CycleOffset: 0
    m_DirectBlendParameter: TurnAngle
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400000, guid: 176a81b341a871542a277bfc8b750c03, type: 2}
    m_Threshold: 180
    m_Position: {x: 0, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: TurnAngle
    m_Mirror: 0
  m_BlendParameter: TurnAngle
  m_BlendParameterY: Blend
  m_MinThreshold: -180
  m_MaxThreshold: 180
  m_UseAutomaticThresholds: 0
  m_NormalizedBlendValues: 0
  m_BlendType: 0
--- !u!1102 &2342921749295851368
AnimatorState:
  serializedVersion: 6
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: Fast walking
  m_Speed: 1
  m_CycleOffset: 0
  m_Transitions: []
  m_StateMachineBehaviours: []
  m_Position: {x: 50, y: 50, z: 0}
  m_IKOnFeet: 0
  m_WriteDefaultValues: 1
  m_Mirror: 0
  m_SpeedParameterActive: 0
  m_MirrorParameterActive: 0
  m_CycleOffsetParameterActive: 0
  m_TimeParameterActive: 0
  m_Motion: {fileID: -5355126438657823684}
  m_Tag: 
  m_SpeedParameter: 
  m_MirrorParameter: 
  m_CycleOffsetParameter: 
  m_TimeParameter: 
--- !u!1102 &2758315469317246304
AnimatorState:
  serializedVersion: 6
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: Rush
  m_Speed: 1
  m_CycleOffset: 0
  m_Transitions: []
  m_StateMachineBehaviours: []
  m_Position: {x: 50, y: 50, z: 0}
  m_IKOnFeet: 0
  m_WriteDefaultValues: 1
  m_Mirror: 0
  m_SpeedParameterActive: 0
  m_MirrorParameterActive: 0
  m_CycleOffsetParameterActive: 0
  m_TimeParameterActive: 0
  m_Motion: {fileID: -5281118582824479741}
  m_Tag: 
  m_SpeedParameter: 
  m_MirrorParameter: 
  m_CycleOffsetParameter: 
  m_TimeParameter: 
--- !u!1107 &3433430394564453211
AnimatorStateMachine:
  serializedVersion: 6
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: Move Layer
  m_ChildStates:
  - serializedVersion: 1
    m_State: {fileID: -516046984345707572}
    m_Position: {x: 470, y: -40, z: 0}
  - serializedVersion: 1
    m_State: {fileID: 2758315469317246304}
    m_Position: {x: 470, y: 80, z: 0}
  - serializedVersion: 1
    m_State: {fileID: 2342921749295851368}
    m_Position: {x: 470, y: 20, z: 0}
  - serializedVersion: 1
    m_State: {fileID: 1553235556490299482}
    m_Position: {x: 470, y: 140, z: 0}
  m_ChildStateMachines: []
  m_AnyStateTransitions: []
  m_EntryTransitions: []
  m_StateMachineTransitions: {}
  m_StateMachineBehaviours: []
  m_AnyStatePosition: {x: 250, y: -10, z: 0}
  m_EntryPosition: {x: 250, y: 30, z: 0}
  m_ExitPosition: {x: 250, y: 70, z: 0}
  m_ParentStateMachinePosition: {x: 800, y: 20, z: 0}
  m_DefaultState: {fileID: 1553235556490299482}
